# norwegian-ai-championship-2025

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yml  docker-compose.yml  main.py  mkdocs.yml  models.toml  prod.Dockerfile  pyproject.toml  requirements.txt  train-car-racing.slurm
DM-i-AI-2025/race-car/: README.md  dtos.py  main.py  pyproject.toml  race_car_env.py  test_endpoint.py  train_ppo_real.py  trpo.py  verify_ppo_components.py  watch_ppo_real.py
DM-i-AI-2025/race-car/.claude/: settings.local.json
DM-i-AI-2025/race-car/GA/: network.py
DM-i-AI-2025/race-car/Rainbow/: env.py  main.py  memory.py  model.py
DM-i-AI-2025/race-car/logs/: evaluations.npz
DM-i-AI-2025/race-car/ppo/: __init__.py  callbacks.py  checkpoint_callback.py  ppo_agent.py  sweep_and_train.py  sweep_config.yaml  train_ppo_real.py  train_ppo_wandb.py  visualize_wandb_run.py  watch_ppo_real.py
race-car/: README.md  api.py  benchmanrk_bot.py  bot_with_memory.py  dtos.py  example.py  lane_controller.db  main.py  ppo_config.json  pyproject.toml  sensor_reading.md  simple_bot.py  test_endpoint.py  validate.py  watch_bot_with_memory.py  watch_op_bot.py
race-car/GA/: crossover.py  ga_sine.py  mutations.py  network.py  selection.py  speciation.py
race-car/Rainbow/: memory.py
race-car/benchmark_results/: benchmark_results_20250805_230905.json
race-car/ppo/: checkpoint_callback_wrapper.py  imitation_wrapper.py  race_car_gym_env.py  simple_ppo.py  simple_race_env.py  sweep_and_train.py  test_env.py  test_simple.py  train_ppo_gym.py  train_ppo_real.py  watch_ppo_real_compat.py  watch_rule_based_ai.py
race-car/ppo/old_files/: simple_ppo.py  simple_race_env.py  test_env.py  test_ppo.py  train_ppo_clean.py  train_ppo_real.py  verify_ppo_operations.py  watch_ppo_clean.py  watch_ppo_gym.py  watch_ppo_real.py  watch_ppo_real_compat.py
race-car/rule_based_AI/: benchmanrk_bot.py  bot_with_memory.py  watch_bot_with_memory.py
race-car/src/elements/: car.py  sensor.py  wall.py
race-car/src/environments/: __init__.py  race_car_env.py
race-car/src/game/: core.py
race-car/src/mathematics/: randomizer.py  vector.py
rag/: .gitattributes  .gitignore  =1.26.0  README.md  README_training.md  api.py  biobert-medical-embeddings-mrl_evaluation_results.json  compare_datasets.py  compare_models_simple.py  config.yaml  data_tester.py  embeddings.py  fact_checker.py  fine_tune_embeddings.py  fine_tune_embeddings_model.py  fine_tune_with_transformers.py  finetuning.py  fix_environment.py  generate_improved_dataset.py  hybrid_search.py  improved_medical_dataset.py  install_cuda_dependencies.py  install_faiss_gpu.py  load_trained_model_example.py  model.py  populate_db.py  profile_pipeline.py  pyproject.toml  quick_model_test.py  requirements-cuda.txt  run_rag.py  standalone_fine_tune.py  start_server.sh  test.py  test_custom_embeddings.py  test_custom_model_integration.py  test_finetuned_retrieval.py  test_local_model_support.py  test_pipeline.py  test_trained_model.py  (+8 more)
rag/Rag-evaluation/: analyze_context.py  analyze_failures.py  convert_data.py  create_faiss_index.py  create_optimized_indexes.py  create_topic_specific_indexes.py  debug_biobert.py  llm_client.py  precompute_topic_embeddings.py  test_contradiction_fix.py  test_faiss_fix.py  test_google_gemma.py  test_optimized_rag.py  topic_first_prompts.md
rag/Rag-evaluation/cache/: data_hash.txt
rag/Rag-evaluation/evaluation/: config.py  main.py
rag/Rag-evaluation/optimized_indexes/: index_metadata.json  topic_embeddings.npy
rag/Rag-evaluation/src/: llm_client.py
rag/Rag-evaluation/templates/: biobert_diagnostic.py  biobert_fast.py  biobert_rag.py  contextual_retriever.py  embeddings_rag.py  graph_rag.py  graph_rag_graph_retriever.py  graph_rag_hybrid_retriever.py  healthcare_rag.py  healthcare_rag_bm25.py  hybrid_rag.py  hybrid_rag_apple_silicon.py  hybrid_rag_dual_process.py  hybrid_retrieval_only.py  hybrid_retrieval_reranked.py  hyde.py  optimized_smart_rag.py  pocketflow_rag.py  query_expansion_with_rrf.py  query_rewrite.py  query_rewrite_rag.py  rrf.py  simple_rag.py  (+4 more)
rag/biobert-medical-embeddings-mrl/: README.md  config.json  config_sentence_transformers.json  model.safetensors  sentence_bert_config.json  tokenizer.json  tokenizer_config.json
rag/biobert-medical-embeddings_20250806_195342/: training_info.json
rag/cache/: data_hash.txt
rag/chunking/: README.md  chunk_statpearls_sliding.py  chunk_topics.py  test_chunking.py
rag/data/: README.md
rag/embeddings/: README_INTEGRATION.md
rag/hybrid/: __init__.py  components.py  config.py  data_loader.py  medical_ontology.py  pipeline.py  utils.py
rag/hybrid_artifacts/: faiss.index
rag/indices/: documents.hash  index_metadata.json
rag/rag-pipeline/: README.md  batch_pipeline.py  cuda_cache.py  cuda_search.py  document_store.py  document_store_embeddings.py  document_store_updated.py  llm_client.py  pyproject.toml  rag_pipeline.py  rag_pipeline_embeddings.py  retrieval_strategies.py  setup.py  setup_uv.py
rag/results/: evaluation_summary.json
rag/scripts/: chunk_documents.py  combine_datasets.py  create_document_chunks.py  create_evaluation_testset.py  generate_all_topics.py  generate_balanced_data.py  generate_topic.py  genereate_statements.py  split_data_bm25.py
segmentation/: .env.example  README.md  analyze_masks.py  api.py  cancer-resnet-monai.ipynb  cancer-swin-unetr-monai.ipynb  cancer-unet-monai-maia.ipynb  cancer-unet-monai-mina.ipynb  cancer-unet-monai.ipynb  client_test.py  dtos.py  example.py  generate_control_masks.py  monai_inference.py  pyproject.toml  train_basic_unet_plusplus.slurm  train_unet_fold0_v471.ipynb  train_unet_fold3_v137.ipynb  train_unet_kfold.ipynb  train_unet_kfold_maia_best_run.ipynb  train_unet_plus_plus_kfold_backbone.py  tumor_dataset.py  unet_inference.py  unet_tta_inference.py  unetplusplus.py  utils.py  validate.py
segmentation/docs/: links.md
src/rag/: README.md  api.py  pyproject.toml
src/segmentation/: pyproject.toml  validate.py
src/shared/: __init__.py  api.py  manage_services.py  pyproject.toml
(+6391 files in other folders)
