[project]
name = "norwegian-ai-championship-2025"
version = "0.0.1"
description = "This is a project for Cogito NTNU's submissions to the Norwegian AI Championship 2025."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "gymnasium[other]>=1.2.0",
    "moviepy>=2.2.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "rich>=14.1.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
