[project]
name = "norwegian-ai-championship-2025"
version = "0.0.1"
description = "This is a project for Cogito NTNU's submissions to the Norwegian AI Championship 2025."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
