[project]
name = "tumor-segmentation"
version = "0.1.0"
description = "Tumor Segmentation API for Norwegian AI Championship 2025"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "uvicorn>=0.35.0",
    "scikit-learn>=1.7.1",
    "monailabel>=0.8.5",
    "monai>=1.4.0",
    "ipykernel>=6.30.0",
]

[project.scripts]
validate = "validate:main"
check-status = "validate:check_status_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
