[project]
name = "race-car"
version = "0.1.0"
description = "AI Race Car Challenge"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "wandb>=0.21.0",
    "stable-baselines3>=2.7.0",
    "gymnasium[other]>=1.2.0",
    "tensorboard>=2.20.0",
    "rich>=14.1.0",
    "torch>=2.0.0",
    "plotly>=5.0.0",
    "numpy>=1.20.0",
    "gymnasium>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]



[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
