[project]
name = "emergency-healthcare-rag"
version = "0.1.0"
description = "RAG system for Emergency Healthcare classification challenge"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "ollama>=0.2.1",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
