[project]
name = "emergency-healthcare-rag"
version = "0.1.0"
description = "Emergency Healthcare RAG API for Norwegian AI Championship 2025"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
validate = "validate:main"
check-status = "validate:check_status_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
